[tool.poetry]
name = "lesion-tracker"
version = "0.1.0"
description = ""
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simpleitk = "^2.3.1"
numpy = "^1.26.3"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
